Занятие 9 Начало разметки

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,4 +4,6 @@
 @import "common/_common";
 
 // blocks
-@import "blocks/_promo";
+@import "blocks/_header";
+@import "blocks/_common";
+@import "blocks/_menu"
