--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,9 +1,13 @@
 // common files
 @import "common/_variables";
 @import "common/_fonts";
+@import "common/_mixins";
 @import "common/_common";
 
 // blocks
 @import "blocks/_header";
 @import "blocks/_common";
-@import "blocks/_menu"
+@import "blocks/_menu";
+@import "blocks/_promo";
+@import "blocks/_services";
+
