--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -6,11 +6,17 @@
   }
 
   li {
-    margin: 0 60px;
+    margin: 0 30px;
   }
 
   a {
     color: #fff;
+    font-family: $font;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    text-decoration: none;
+    text-transform: uppercase;
   }
 }
 
