--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -1,16 +1,29 @@
 .promo {
-  padding: 200px 0;
+  margin: 0 auto;
+  padding: 290px 0 214px;
+  background-image: url("/images/promo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-color: rgba(51, 51, 51, 0.4);
 }
 
 .promo-inner {
   @include inner;
   display: flex;
-  text-align: center;
   justify-content: center;
 }
 
 .promo-title {
-
+  font-family: $font;
+  font-weight: 600;
+  color: $color-light;
+  font-size: 72px;
+  line-height: 98px;
+  margin-bottom: 100px;
 }
 
+.btn {
+  @include btn;
+}
 
