--- a/src/styles/common/_mixins.scss
+++ b/src/styles/common/_mixins.scss
@@ -3,3 +3,29 @@
   margin: 0 auto;
   border: 1px solid green;
 }
+
+@mixin btn {
+  display: inline-block;
+  min-width: 497px;
+  height: 104px;
+  padding: 30px 40px;
+  font-family: $font;
+  font-weight: 400;
+  font-size: 42px;
+  line-height: 57px;
+  text-align: center;
+  text-decoration: none;
+  color: $color-light;
+  border-radius: 6px;
+  background-color: $color-bright;
+}
+
+@mixin main-logo {
+  font-family: $font;
+  font-weight: 600;
+  font-size: 42px;
+  line-height: 57px;
+  margin-right: auto;
+  text-decoration: none;
+  color: $color-light;
+}
