--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,8 +6,9 @@
 
 // blocks
 @import "blocks/_header";
-@import "blocks/_common";
 @import "blocks/_menu";
 @import "blocks/_promo";
 @import "blocks/_services";
-
+@import "blocks/_order";
+@import "blocks/_form";
+@import "blocks/_footer";
