--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -1,10 +1,16 @@
 .footer {
+  padding: 31px 0;
   background-color: $color-dark;
 }
 
 .footer-inner {
   @include inner;
-  text-align-last: left;
+  text-align: left;
+}
+
+.footer-wrap {
+  display: flex;
+  align-items: center;
 }
 
 .main-logo-footer {
@@ -17,4 +23,25 @@
   line-height: 38px;
   color: $color-light;
   text-decoration: none;
+}
+
+.social {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-left: 60px;
+}
+
+.social-item {
+  margin: 0;
+  margin-left: 15px;
+}
+
+.social-link {
+  display: block;
+  width: 26px;
+  height: 26px;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
