--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -4,8 +4,12 @@
   left: 0;
   top: 0;
   z-index: 1000;
-  padding: 17px;
+  padding: 16px 0;
   background-color: $color-dark;
+
+  @media (max-width: $tablet-max) {
+    padding: 20px 0;
+  }
 }
 
 .header-inner {
@@ -16,6 +20,21 @@
   display: flex;
   align-items: center;
 }
- .main-logo {
+
+.main-logo {
   @include main-logo;
- }
+}
+
+.menu {
+  @media (max-width: $mobile-max) {
+    display: none;
+  }
+}
+
+.burger {
+  display: none;
+
+  @media (max-width: $mobile-max) {
+    display: block;
+  }
+}
