--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -1,6 +1,14 @@
 .footer {
   padding: 31px 0;
   background-color: $color-dark;
+
+  @media (max-width: $tablet-max) {
+    padding: 35px 0;
+  }
+
+  @media (max-width: $mobile-max) {
+    padding: 30px 0 35px;
+  }
 }
 
 .footer-inner {
@@ -11,10 +19,21 @@
 .footer-wrap {
   display: flex;
   align-items: center;
+
+  @media (max-width: $mobile-max) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .main-logo-footer {
   @include main-logo;
+
+  @media (max-width: $mobile-max) {
+    margin: 0 auto;
+    font-size: 36px;
+    line-height: 49px;
+  }
 }
 
 .phone {
@@ -23,6 +42,15 @@
   line-height: 38px;
   color: $color-light;
   text-decoration: none;
+  margin-right: 60px;
+
+  @media (max-width: $tablet-max) {
+    margin-right: 50px;
+  }
+
+  @media (max-width: $mobile-max) {
+    margin: 30px auto 15px;;
+  }
 }
 
 .social {
@@ -30,7 +58,14 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  margin-left: 60px;
+
+  @media (max-width: $tablet-max) {
+    margin-right: 50px;
+  }
+
+  @media (max-width: $mobile-max) {
+    margin: 0 auto;
+  }
 }
 
 .social-item {
