--- a/src/styles/blocks/_order.scss
+++ b/src/styles/blocks/_order.scss
@@ -1,6 +1,14 @@
 .order {
   padding: 130px 0;
   background-color: rgb(51, 51, 51, 0.1);
+
+  @media (max-width: $tablet-max) {
+    padding: 120px auto;
+  }
+
+  @media (max-width: $mobile-max) {
+    padding: 90px auto;
+  }
 }
 
 .order-inner {
@@ -11,6 +19,16 @@
   font-weight: 400;
   font-size: 64px;
   line-height: 87px;
+
+  @media (max-width: $tablet-max) {
+    font-size: 60px;
+    line-height: 82px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 36px;
+    line-height: 49px;
+  }
 }
 
 .order-desc {
@@ -18,12 +36,52 @@
   font-size: 28px;
   line-height: 38px;
   margin: 40px 0 90px;
+
+  @media (max-width: $mobile-max) {
+    font-size: 18px;
+    line-height: 25px;
+    margin: 20px 0 60px;
+  }
 }
 
 .btn-order {
   min-width: 100%;
+  padding: 34px;
   font-size: 28px;
   line-height: 34px;
+  cursor: pointer;
+
+  @media (max-width: $tablet-max) {
+    display: none;
+  }
+
+  @media (max-width: $mobile-max) {
+    display: inline-block;
+  }
+}
+
+.btn-order-tablet {
+  display: none;
+  width: 100%;
+  font-family: $font;
+  padding: 35px 0;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 34px;
+  text-align: center;
+  text-decoration: none;
+  color: $color-light;
+  border-radius: 6px;
+  background-color: $color-bright;
+  cursor: pointer;
+
+  @media (max-width: $tablet-max) {
+    display: inline-block;
+  }
+
+  @media (max-width: $mobile-max) {
+    display: none;
+  }
 }
 
 
