--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -6,6 +6,15 @@
   background-size: cover;
   background-position: center center;
   background-color: rgba(51, 51, 51, 0.4);
+
+  @media (max-width: $tablet-max) {
+    padding: 270px 0 190px;
+    background-size: cover;
+  }
+
+  @media (max-width: $mobile-max) {
+    padding: 180px 0 100px;
+  }
 }
 
 .promo-inner {
@@ -21,6 +30,17 @@
   font-size: 72px;
   line-height: 98px;
   margin-bottom: 100px;
+
+  @media (max-width: $tablet-max) {
+    font-size: 54px;
+    line-height: 74px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 32px;
+    line-height: 44px;
+    margin-bottom: 80px;
+  }
 }
 
 .btn {
