--- a/src/styles/common/_mixins.scss
+++ b/src/styles/common/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin inner {
-  width: 1278px;
+  max-width: 1278px;
   margin: 0 auto;
   border: 1px solid green;
 }
@@ -7,8 +7,8 @@
 @mixin btn {
   display: inline-block;
   min-width: 497px;
-  height: 104px;
-  padding: 30px 40px;
+  // height: 104px;
+  padding: 30px 0;
   font-family: $font;
   font-weight: 400;
   font-size: 42px;
@@ -18,6 +18,13 @@
   color: $color-light;
   border-radius: 6px;
   background-color: $color-bright;
+
+  @media (max-width: $mobile-max) {
+    min-width: 278px;
+    padding: 20px 0;
+    font-size: 24px;
+    line-height: 33px;
+  }
 }
 
 @mixin main-logo {
@@ -28,4 +35,14 @@
   margin-right: auto;
   text-decoration: none;
   color: $color-light;
+
+  @media (max-width: $tablet-max) {
+    font-size: 36px;
+    line-height: 49px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 28px;
+    line-height: 38px;
+  }
 }
