--- a/src/styles/blocks/_services.scss
+++ b/src/styles/blocks/_services.scss
@@ -1,5 +1,5 @@
 .services {
-  padding: 130px 0;
+  padding: 220px 0 130px;
   background-color: $color-light;
 
   @media (max-width: $tablet-max) {
