--- a/src/styles/common/_mixins.scss
+++ b/src/styles/common/_mixins.scss
@@ -1,7 +1,26 @@
 @mixin inner {
   max-width: 1278px;
   margin: 0 auto;
-  border: 1px solid green;
+  // border: 1px solid green;
+}
+
+@mixin section-title {
+  font-family: $font;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 87px;
+  color: $color-dark;
+  text-align: center;
+
+  @media (max-width: $tablet-max) {
+    font-size: 60px;
+    line-height: 82px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 36px;
+    line-height: 49px;
+  }
 }
 
 @mixin btn {
