Добавила аккордеон и карусель

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,9 @@
 @import "common/_mixins";
 @import "common/_common";
 
+// plugins
+@import "plugins/slick";
+
 // blocks
 @import "blocks/_header";
 @import "blocks/_menu";
@@ -13,3 +16,5 @@
 @import "blocks/_form";
 @import "blocks/_footer";
 @import "blocks/_contacts";
+@import "blocks/_faq";
+@import "blocks/_reviews";
