--- a/src/styles/blocks/_services.scss
+++ b/src/styles/blocks/_services.scss
@@ -1,5 +1,5 @@
 .services {
-  padding: 220px 0 130px;
+  padding: 130px 0;
   background-color: $color-light;
 
   @media (max-width: $tablet-max) {
@@ -16,6 +16,7 @@
 }
 
 .services-title {
+  margin-bottom: 97px;
   font-family: $font;
   font-weight: 400;
   font-size: 64px;
@@ -36,7 +37,7 @@
 .services-wrap {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 100px;
+  margin-top: 0;
   margin-bottom: 120px;
   margin-left: -10px;
   margin-right: -10px;
@@ -85,4 +86,61 @@
 
 .services-photo {
   width: 100%;
+}
+
+// Страница Каталог
+.services-catalog {
+  padding: 220px 0 130px;
+  background-color: $color-light;
+
+  @media (max-width: $tablet-max) {
+    padding: 120px 0;
+  }
+
+  @media (max-width: $mobile-max) {
+    padding: 90px 0;
+  }
+}
+
+.services-title-catalog {
+  margin-bottom: 77px;
+  font-family: $font;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 87px;
+  color: $color-dark;
+
+  @media (max-width: $tablet-max) {
+    font-size: 60px;
+    line-height: 82px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 36px;
+    line-height: 49px;
+  }
+}
+
+.catalog-filter {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+  list-style-type: none;
+  text-decoration: none;
+
+
+  li {
+    margin: 0 25px;
+
+  }
+
+  a {
+    font-family: $font;
+    font-weight: 600;
+    color: $color-dark;
+    font-size: 22px;
+    line-height: 24px;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
 }
