--- a/src/styles/blocks/_catalog.scss
+++ b/src/styles/blocks/_catalog.scss
@@ -61,6 +61,10 @@
     line-height: 24px;
     text-transform: uppercase;
     text-decoration: none;
+
+    &.active {
+      color: $color-bright;
+    }
   }
 }
 
