--- a/src/styles/blocks/_reviews.scss
+++ b/src/styles/blocks/_reviews.scss
@@ -19,7 +19,6 @@
   flex-basis: 100%;
   display: flex;
   align-items: center;
-  padding: 0 188px;
 }
 
 .reviews-content {
@@ -52,6 +51,27 @@
   overflow: hidden;
 }
 
-.reviews-img {
+// Карусель
+.reviews-list {
+  padding: 0 188px;
 
+  .slick-arrow {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 60px;
+    height: 60px;
+  }
+
+  .slick-prev {
+    left: 0;
+    font-size: 0;
+  }
+
+  .slick-next {
+    right: 0;
+    font-size: 0;
+  }
 }
+
