--- a/src/styles/common/_mixins.scss
+++ b/src/styles/common/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin inner {
   max-width: 1278px;
   margin: 0 auto;
-  border: 1px solid green;
+  // border: 1px solid green;
 }
 
 @mixin section-title {
