--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -27,6 +27,7 @@
   font-size: 28px;
   line-height: 34px;
   color: $color-dark;
+  border: none;
   border-radius: 6px;
   background-color: $color-light;
 }
