--- a/src/styles/blocks/_order.scss
+++ b/src/styles/blocks/_order.scss
@@ -50,6 +50,7 @@
   margin-top: 30px;
   font-size: 28px;
   line-height: 34px;
+  border: none;
   cursor: pointer;
 
   @media (max-width: $tablet-max) {
@@ -75,6 +76,7 @@
   text-align: center;
   text-decoration: none;
   color: $color-light;
+  border: none;
   border-radius: 6px;
   background-color: $color-bright;
   cursor: pointer;
