--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -19,3 +19,5 @@
 @import "blocks/_faq";
 @import "blocks/_reviews";
 @import "blocks/_catalog";
+@import "blocks/_btn";
+@import "blocks/_main-logo";
