--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -21,7 +21,7 @@
   }
 
   li {
-    margin: 0 30px;
+    margin: 0 2px;
 
     @media (max-width: $mobile-max) {
       margin-bottom: 10px;
@@ -29,6 +29,8 @@
   }
 
   a {
+    display: block;
+    padding: 35px 25px;
     color: #fff;
     font-family: $font;
     font-weight: 700;
@@ -36,6 +38,14 @@
     line-height: 24px;
     text-decoration: none;
     text-transform: uppercase;
+
+    @media (max-width: $mobile-max) {
+      padding: 10px 25px;
+    }
+
+    &.menu-active {
+      background-color: $color-bright;
+    }
   }
 }
 
