--- a/src/styles/blocks/_order.scss
+++ b/src/styles/blocks/_order.scss
@@ -1,5 +1,5 @@
 .order {
-  padding: 130px 0;
+  padding: 130px 0 100px;
   background-color: rgb(51, 51, 51, 0.1);
 
   @media (max-width: $tablet-max) {
@@ -41,52 +41,6 @@
     font-size: 18px;
     line-height: 25px;
     margin: 20px 0 60px;
-  }
-}
-
-.btn-order {
-  min-width: 100%;
-  padding: 34px;
-  margin-top: 30px;
-  font-size: 28px;
-  line-height: 34px;
-  border: none;
-  cursor: pointer;
-
-  @media (max-width: $tablet-max) {
-    display: none;
-  }
-
-  @media (max-width: $mobile-max) {
-    display: inline-block;
-  }
-}
-
-.btn-order-tablet {
-  display: none;
-  width: 100%;
-  margin-top: 40px;
-  margin-left: $gap-half;
-  margin-right: $gap-half;
-  font-family: $font;
-  padding: 35px 0;
-  font-weight: 400;
-  font-size: 28px;
-  line-height: 34px;
-  text-align: center;
-  text-decoration: none;
-  color: $color-light;
-  border: none;
-  border-radius: 6px;
-  background-color: $color-bright;
-  cursor: pointer;
-
-  @media (max-width: $tablet-max) {
-    display: inline-block;
-  }
-
-  @media (max-width: $mobile-max) {
-    display: none;
   }
 }
 
