--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -1,5 +1,9 @@
 .menu {
-  @media (max-width: $mobile-max) {
+  @media (min-width: $desktop) {
+    display: block !important;
+  }
+
+  @media (max-width: $tablet-max) {
     position: absolute;
     top: 100%;
     left: 0;
@@ -14,7 +18,7 @@
     list-style-type: none;
     padding-left: 0;
 
-    @media (max-width: $mobile-max) {
+    @media (max-width: $tablet-max) {
       display: block;
       text-align: center;
     }
